--- a/react_10/assignment_01/package.json
+++ b/react_10/assignment_01/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment_01",
+  "name": "class_learning",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,7 +16,8 @@
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
